apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__delete_field.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: "apply_migration(&source_doc(),\n        &Migration::builder().action(Action::Delete {\n                            path: \"obj.field1\".to_string(),\n                        }).description(\"delete field1\").build()).expect(\"expected successful migration\")"
---
{
  "obj": {
    "field2": 2
  },
  "arr": [
    "v1",
    "v2"
  ]
}
